* Main menu font size made smaller for tablets and sticky menu to fit more buttons.
* Updated to FontAwesome 4.3.
* Minor styling improvements for bbPress.
* Changed Jumbotron element titles to use `<h2>` tags to fit in with header Typography on Theme Options page.
* Improvements to Icon Box element.
* Fixed: Image cropping with tb_x_large, tb_large, and tb_medium sizes.
* Fixed: Post Showcase (no masonry) not displaying right with excerpts.
* Fixed: Breadcrumbs, when bbPress is installed, was taking over breadcrumbs all over the website.
* Fixed: Added missing breadcrumbs for bbPress user profiles.
* Fixed: bbPress tag_list PHP error at the top of topics when "Lead Topic" option is disabled.
* Fixed: Custom padding not applying to "popout" elements in Builder.
* Fixed: Widgets set as "panel" from theme options not displaying right with no widget title.
* Fixed: Issues with nag regarding Theme Options not matching Theme Base on initial theme install, with default Developer base selected.
* Fixed: Blog display option not displaying "full content" when selected, instead of excerpts.
* Fixed: Slider option type not allowing you to inert images less than 200px wide. This was most evident when trying to use the Partner Logos element in the Builder and using small logo images.
* Fixed: When a layout section has repeating background set to parallax, it would get stretched on mobile.
* Fixed: In Promo Box element, when button is displayed below text, text alignment should be centered.
* Fixed: Technorati image icon in social icons.
* Fixed: "Preview Changes" not working correctly when inserting current page's content into custom layout.
* Fixed: "Save as Draft" not working for custom layout pages.
* Fixed: Issues with "Blank Page" page template.
* Fixed: `themeblvd_get_option()` not returning `0` string value.
* Fixed: Minor CSS issues with WordPress native self-hosted videos, mainly in Firefox.
* Fixed: Description not showing with milestone ring element.