@@ -35,6 +35,7 @@ Jump Start Changelog
 * Minor styling improvements for bbPress.
 * Changed Jumbotron element titles to use `<h2>` tags to fit in with header Typography on Theme Options page.
 * Improvements to Icon Box element.
+* Simplified header padding options for Super User theme base to desktop only.
 * Fixed: Image cropping with tb_x_large, tb_large, and tb_medium sizes.
 * Fixed: Post Showcase (no masonry) not displaying right with excerpts.
 * Fixed: Breadcrumbs, when bbPress is installed, was taking over breadcrumbs all over the website.
